--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://umarmusa20002:Musa1.sql@cluster0.uxuqarg.mongodb.net/
+MONGODB_URI=mongodb+srv://umarmusa20002:A4FqsFWa0GyUYMf1@cluster0.uxuqarg.mongodb.net/
